--- a/notes/meeting_2021aug29.org
+++ b/notes/meeting_2021aug29.org
@@ -56,7 +56,7 @@ my $result = $dmh.dualmap( '-', $gross, $costs );
 #+END_SRC
 **** a little tricky to think about
 ***** it isn't *exactly* like a case statement
-****** but the "is default" feature helpsg
+****** but the "is default" feature helps
 
 *** dualmap status
 **** did a rewrite
