--- a/notes/meeting_2021aug29.org
+++ b/notes/meeting_2021aug29.org
@@ -84,7 +84,7 @@ if $obj.can('method') {
    $obj.method( $arg1, $arg2 );
 }
 #+END_SRC
-*** documentation: Safe call operator
+*** documentation: "Safe call operator"
 **** "$invocant.?method calls method method on $invocant if it has a method of such name. Otherwise it returns Nil."
 **** https://docs.raku.org/language/operators#methodop_.?
 *** avoids need to check if .can
