--- a/notes/meeting_2021aug29.org
+++ b/notes/meeting_2021aug29.org
@@ -14,9 +14,7 @@ https://stackoverflow.com/questions/68869354/given-two-objects-can-you-find-the-
 and computer science. For the common ancestor of a set of species
 in evolutionary trees, see most recent common ancestor. For a
 common ancestor of all life forms, see last universal common
-ancestor.  In this tree, the lowest common ancestor of the nodes
-x and y is marked in dark green. Other common ancestors are shown
-in light green."
+ancestor."  
 
 In graph theory and computer science, the lowest common ancestor (LCA) of two nodes v and w in a tree or directed acyclic graph (DAG) T is the lowest (i.e. deepest) node that has both v and w as descendants, where we define each node to be a descendant of itself (so if v has a direct connection from w, w is the lowest common ancestor). 
 
