--- a/notes/meeting_2021sep12.org
+++ b/notes/meeting_2021sep12.org
@@ -5,7 +5,7 @@
 *** code examples:
 **** https://github.com/doomvox/raku-study/tree/main/bin/2021sep12
 ** miscellanious miscellany 
-*** Bruce Gray's promised anti-Haskell spiel
+*** bruce gray's promised anti-Haskell spiel
 *** A lot of stackoverflow traffic recently
 **** https://stackoverflow.com/questions/68987098/raku-array-will-not-sort 
 ***** really a quoting issue, getting a list of quoted words doesn't work with "Q()"
