--- a/notes/meeting_2021sep12.org
+++ b/notes/meeting_2021sep12.org
@@ -17,3 +17,5 @@
 **** http://rosettacode.org/wiki/Sum_of_primes_in_odd_positions_is_prime#Raku 
 
 *** https://modules.raku.org/dist/Game::Sudoku:cpan:SCIMON 
+
+*** next meeting: Sept 26, 2021
