--- a/notes/meeting_2021sep12.org
+++ b/notes/meeting_2021sep12.org
@@ -18,5 +18,9 @@
 
 *** https://modules.raku.org/dist/Game::Sudoku:cpan:SCIMON 
 
+*** 
+
+** next meeting 
 *** next meeting: Sept 26, 2021
 *** tentative announcment: comparison case statement vs. multi-dispatch
+*** one-of-these-days: cro for web stuff
