--- a/notes/meeting_2021sep12.org
+++ b/notes/meeting_2021sep12.org
@@ -6,6 +6,8 @@
 **** https://github.com/doomvox/raku-study/tree/main/bin/2021sep12
 ** miscellanious miscellany 
 *** booleans in perl and raku
+/home/doom/End/Cave/Perl6/Wall/raku-study/bin/2021sep12/booleans_in_perl5.pl
+/home/doom/End/Cave/Perl6/Wall/raku-study/bin/2021sep12/booleans_in_raku.pl6
 
 *** bruce gray's promised anti-Haskell spiel
 **** roughly (I paraphrase)
