--- a/notes/meeting_2021sep12.org
+++ b/notes/meeting_2021sep12.org
@@ -12,7 +12,7 @@
 **** https://github.com/doomvox/raku-study/tree/main/bin/2021sep12/catching_up_to_bill.pl6
 
 *** bruce gray's promised anti-Haskell spiel
-**** roughly (I paraphrase)
+**** roughly (paraphrased)
 the way haskell works is that it converts a two argument function
 call plus(3, 4) into a single arg function call: plus3(4).  A
 special purpose function call with one arg hardcoded.
