--- a/notes/meeting_2021sep26.org
+++ b/notes/meeting_2021sep26.org
@@ -7,4 +7,7 @@
 ** battle plan
 *** bin pre-loaded with small ammo
 *** nano-lightning talk: case vs multi-dispatch
-*** 
+*** once around the net
+**** stackoverflow
+**** perl6-users
+**** Raku weekly
