--- a/notes/meeting_2021sep26.org
+++ b/notes/meeting_2021sep26.org
@@ -11,6 +11,7 @@
 **** https://github.com/doomvox/raku-study/tree/main/bin/2021sep26/02-the_multi_dispatch_case.raku
 ***** TODO benchmark: add a repetition argument, run with "time" 
 ***** TODO write an example using overlapping subsets, need 'is default' to break tie
+****** point: "default" means something different in the two approaches
 *** once around the net
 **** stackoverflow
 **** perl6-users
