--- a/notes/meeting_2021sep26.org
+++ b/notes/meeting_2021sep26.org
@@ -9,6 +9,9 @@
 *** nano-lightning talk: given-when vs multi-dispatch
 **** https://github.com/doomvox/raku-study/tree/main/bin/2021sep26/01-the_given_when_case.raku
 **** https://github.com/doomvox/raku-study/tree/main/bin/2021sep26/02-the_multi_dispatch_case.raku
+***** notice: order matters with given-when, with multidispatch it's specificity
+****** given-when is straight-forward to think about
+****** multi-dispatch lets you accrete cases via OOP methods
 ***** TODO benchmark: add a repetition argument, run with "time" 
 ***** TODO write an example using overlapping subsets, need 'is default' to break tie
 ****** point: "default" means something different in the two approaches
