--- a/notes/talks/multidispatch_vs_case/compare_contrast_and_extinguish.org
+++ b/notes/talks/multidispatch_vs_case/compare_contrast_and_extinguish.org
@@ -1,1 +1,5 @@
-* 
+* raku case vs multidispatch
+** case
+*** using lexical sequence to order comparisons
+** multidispatch
+*** ordered by specificity
