--- a/notes/meeting_2021sep26.org
+++ b/notes/meeting_2021sep26.org
@@ -19,7 +19,7 @@
 ******* note: "default" means something different in the two approaches
 *** data-handling in raku
 **** https://stackoverflow.com/questions/66926663/is-there-a-convenient-way-to-replicate-rs-concept-of-named-vectors-in-raku-p/67513527?noredirect=1#comment122449810_67513527
-***** Bill Michels objects to the word "Row" for a data-record in my solution
+***** William Michaels objects to the word "Row" for a data-record in my solution
 **** arrays-of-objects
 ***** https://www.reddit.com/r/rakulang/comments/pocomd/a_post_which_came_out_from_a_provocation/hczfj2r/
 
