--- a/notes/talks/multidispatch_vs_case/compare.org
+++ b/notes/talks/multidispatch_vs_case/compare.org
@@ -5,7 +5,7 @@
 *** multi
 **** orders cases ~by "specificity", not lexically 
 ***** in the case of subsets, falls back to order of definition
-****** subsets are essentially grouped by the type they're based on
+****** subsets are grouped by the type they're based on
 ****** BUT they don't behave like two multis with same type
 ******* uses the order of definition for subsets based on same type 
 
