--- a/notes/talks/multidispatch_vs_case/compare.org
+++ b/notes/talks/multidispatch_vs_case/compare.org
@@ -1,4 +1,4 @@
-* raku case vs multidispatch
+* raku case vs multidispatch                                              f
 ** very roughly
 *** case
 **** an obvious lexical sequence of comparisons (running a gauntlet)
