--- a/notes/meeting_2021sep26.org
+++ b/notes/meeting_2021sep26.org
@@ -1,4 +1,4 @@
-* meeting notes September 16, 2021
+* meeting notes September 16, 2021                                      a
 ** the usual links:
 *** meeting notes
 **** https://github.com/doomvox/raku-study/blob/main/notes/meeting_2021sep26.md
