--- a/notes/meeting_2021sep26.org
+++ b/notes/meeting_2021sep26.org
@@ -38,6 +38,7 @@
 **** https://www.reddit.com/r/rakulang/comments/ptm7qx/rakus_surprisingly_good_lisp_impression/
 *** pairs of separators from a string
 **** https://www.nntp.perl.org/group/perl.perl6.users/2021/09/msg10138.html
+**** a discussion yary was involved in, which indicates there's something interesting
 *** bioinformatics on rosettacode 
 **** http://rosettacode.org/wiki/Bioinformatics/base_count
 
