--- a/notes/meeting_2021sep26.org
+++ b/notes/meeting_2021sep26.org
@@ -41,6 +41,9 @@
 **** a discussion yary was involved in, which indicates there's something interesting
 *** bioinformatics on rosettacode 
 **** http://rosettacode.org/wiki/Bioinformatics/base_count
+*** lca (old topic)
+**** https://stackoverflow.com/questions/68869354/given-two-objects-can-you-find-the-nearest-common-ancestor
+**** i think I like raiph's solution: write it up as an answer
 
 *** once around the net
 **** stackoverflow
