--- a/notes/meeting_2021sep26.org
+++ b/notes/meeting_2021sep26.org
@@ -66,3 +66,8 @@
 *** plain text accounting site
 **** doing accounting using just plain text
 **** jeff hint
+
+*** dd-recover
+**** copying data from dying media
+
+*** cryoflux
