--- a/notes/meeting_2021sep26.org
+++ b/notes/meeting_2021sep26.org
@@ -67,7 +67,7 @@
 **** doing accounting using just plain text
 **** jeff hint
 
-*** dd-recover
+*** ddrescue, dd_rescue
 **** copying data from dying media
 
 *** cryoflux
