--- a/notes/meeting_2021sep26.org
+++ b/notes/meeting_2021sep26.org
@@ -72,5 +72,5 @@
 ***** copying data from dying media
 
 **** kryoflux
-https://kryoflux.com/ 
-Floppy disk archival tool 
+***** https://kryoflux.com/ 
+***** Floppy disk archival tool 
