--- a/notes/meeting_2021sep26.org
+++ b/notes/meeting_2021sep26.org
@@ -63,6 +63,8 @@
 ** next meeting
 *** next meeting: Oct 10, 2021
 
+** misc notes
+
 *** plain text accounting site
 **** doing accounting using just plain text
 **** jeff hint
