--- a/notes/meeting_2021oct10.org
+++ b/notes/meeting_2021oct10.org
@@ -8,7 +8,7 @@
 *** leftover bits
 **** https://github.com/doomvox/raku-study/tree/main/bin/2021sep26/anon_var_vs_topic.raku
 
-*** nano-lightning talk: given-when vs multi-dispatch
+*** lightning talk in-progress: given-when vs multi-dispatch
 **** https://github.com/doomvox/raku-study/tree/main/bin/2021sep26/01-the_given_when_case.raku
 **** https://github.com/doomvox/raku-study/tree/main/bin/2021sep26/02-the_multi_dispatch_case.raku
 ***** notice: order matters with given-when, with multidispatch it's specificity
